tests/parser-test-files/bad-files/parse-type.13.error
error: Malformed type
  --> test:4:12
   |
 4 |  (declare f (=> T))
   |              ^^ unnecessary `=>`
help: remove `=>`
 4 | (declare f T)
   |            -
